// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 dlffaV"
  data-cy="test-hero"
>
  <div
    className="hero__HeroContentWrapper-sc-qftwzr-1 ixuDOH"
  >
    <div
      className="hero___StyledDiv-sc-qftwzr-6 hJgUGu"
    >
      <p
        className="hero___StyledP-sc-qftwzr-8 codxcZ"
      >
        Instrument
      </p>
      <h1
        className="hero__HeroTitle-sc-qftwzr-2 bSBmwr"
      >
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv2-sc-qftwzr-9 fqzeMC"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="sc-aXZVg cVUZgM"
      >
        <span
          className="sc-gEvEer kFxWaJ"
        >
          Data Shortcut
        </span>
        <div
          className="sc-eqUAAy bXiQQH"
        >
          <input
            className="sc-fqkvVR IicPK"
            onChange={[Function]}
            placeholder="Go directly to a campaign, platform, or instrument"
            type="text"
            value=""
          />
          <span
            aria-label="Arrow icon"
            className="sc-dcJsrY cwKFSh"
            role="img"
          >
            <svg
              className="arrow-icon___StyledSvg-sc-nsdqlv-0 JjVso"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Arrow 
                right
              </title>
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <polygon
                fill="#e9eaec"
                points="7.586,2.414 12.172,7 0,7 0,9 12.172,9 7.586,13.586 9,15 16,8 9,1"
              />
            </svg>
          </span>
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  className="hero__Container-sc-qftwzr-0 dlffaV"
  data-cy="undefined-hero"
>
  <div
    className="hero__HeroContentWrapper-sc-qftwzr-1 ja-DtGH"
  >
    <div
      className="hero___StyledDiv-sc-qftwzr-6 hJgUGu"
    >
      <p
        className="hero___StyledP-sc-qftwzr-8 codxcZ"
      >
        Instrument
      </p>
      <h1
        className="hero__HeroTitle-sc-qftwzr-2 bSBmwr"
      >
        2D-C/P
         
        2D-C/P Hydrometeor Imaging Probe
      </h1>
    </div>
    <div
      className="hero___StyledDiv2-sc-qftwzr-9 fqzeMC"
    >
      <p>
        The 2DC probe records images of hydrometeors...
      </p>
      <div
        className="sc-aXZVg cVUZgM"
      >
        <span
          className="sc-gEvEer kFxWaJ"
        >
          Data Shortcut
        </span>
        <div
          className="sc-eqUAAy bXiQQH"
        >
          <input
            className="sc-fqkvVR IicPK"
            onChange={[Function]}
            placeholder="Go directly to a campaign, platform, or instrument"
            type="text"
            value=""
          />
          <span
            aria-label="Arrow icon"
            className="sc-dcJsrY cwKFSh"
            role="img"
          >
            <svg
              className="arrow-icon___StyledSvg-sc-nsdqlv-0 JjVso"
              height="16"
              role="img"
              version="1.1"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Arrow 
                right
              </title>
              <rect
                fill="none"
                height="16"
                width="16"
              />
              <polygon
                fill="#e9eaec"
                points="7.586,2.414 12.172,7 0,7 0,9 12.172,9 7.586,13.586 9,15 16,8 9,1"
              />
            </svg>
          </span>
        </div>
        <div
          className="type-ahead-dropdown"
        />
      </div>
    </div>
  </div>
</section>
`;
